# uapi

./: CMakeLists.txt  README.md
include/: uapi.h  uapi_types.h
src/: CMakeLists.txt  lcd.c  lcd.h  lcd_config.h  uapi.c  uapi.h  uapi_stm32_hal.c  util.h
src/lcd/: CMakeLists.txt  lcd.c  lcd.h
src/uapi/: CMakeLists.txt
src/uapi/uapi_common/: CMakeLists.txt
src/uapi/uapi_stm32_hal/: CMakeLists.txt  uapi_stm32_hal.c
src/uapi_stm32_hal/: uapi_stm32_hal.c
